# rust-isabelle-client

./: Cargo.toml  readme.md
src/: batch.rs  client.rs  command.rs  commands.rs  common.rs  lib.rs  main.rs  process.rs  server.rs
src/client/: args.rs  client.rs  commands.rs  mod.rs  results.rs
