[package]
name = "isabelle-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.1"
