[package]
name = "isabelle-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Client to interact with Isabelle servers"
homepage = "https://github.com/lotzk/rust-isabelle-client"
repository = "https://github.com/lotzk/rust-isabelle-client"
readme = "readme.md"
keywords = ["Isabelle"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.1"
serial_test = "1.0.0"
tokio-test = "0.4.2"

